--- a/pricePredictionExample.rmd
+++ b/pricePredictionExample.rmd
@@ -27,55 +27,23 @@ source(here("Function", "f_elasticNetModel.R"))
 
 
 ```{r}
-
+# Download Data
 # List of tickers
 df_clusters_yearly <- f_cluster(10)
 tickers <- df_clusters_yearly
+priceData <- get_stock_data(tickers)
 
-# Initialize a list to store the data
-data_list <- list()
+head(priceData)
+# Save the 'data' object to an RData file
+save(priceData, file = here("Clean_Data", "stock_data.rda"))
 
-# Loop through each ticker and download the data
-for(ticker in tickers) {
-  # Get the data from Yahoo Finance
-  stock_data <- getSymbols(ticker, src = "yahoo", auto.assign = FALSE)
-  
-  # Extract the required columns
-  df <- data.frame(
-    date = index(stock_data),
-    ticker = ticker,
-    open = Op(stock_data),
-    high = Hi(stock_data),
-    low = Lo(stock_data),
-    volume = Vo(stock_data),
-    close = Ad(stock_data)
-  )
-  
-  # Store the data in the list
-  data_list[[ticker]] <- df
-}
+# To load the data back into R at a later time
+load(here("Clean_Data", "stock_data.rda"))
 
-# Standardize column names for each data frame in the list
-for (ticker in tickers) {
-  colnames(data_list[[ticker]]) <- c("date", "ticker", "open", "high", "low", "volume", "close")
-}
 
-# Combine all data frames in the list into a single data frame
-combined_data <- do.call(rbind, data_list)
 
-# View the first few rows of the combined data
-head(combined_data)
 
-# Assuming your combined data frame is named 'combined_data' and has a column 'Close'
-library(xts)
 
-# Convert the 'Close' column to an xts object using the 'date' column as the index
-close_xts <- xts(combined_data$close, order.by=as.Date(combined_data$date))
-returns_xts <- Return.calculate(close_xts, method = "simple")
-combined_data$return <- coredata(returns_xts / 100)
-combined_data <- combined_data[-1, ]
-
-dataPrice <- combined_data
 
 
 # Initialiser notre instance :  LassoPrediction class
@@ -137,7 +105,7 @@ lasso_pred$pricePrediction <- lasso_pred$get_price_prediction(testRange)
 
 self = lasso_pred
 
-df_price <- self$df_price
+self$df_price <- data
 
 # A few technical indicators functions from TTR, see class notes 
 # for their definition
