--- a/project_script.Rmd
+++ b/project_script.Rmd
@@ -66,7 +66,7 @@ Une fois les titres choisit et les données importées, nous allons completer pl
   * Sauvegarder les transactions et les résultats.
 
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 source(here("run_strategy.R"))
 ```
 
@@ -74,7 +74,7 @@ source(here("run_strategy.R"))
 
 Pour conclure, nous allons regrouper certaines informations pertinentes tel que des mesures de risques ainsi que des informations concernant les transactions.
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 source(here("run_outputs.R"))
 ```
 
